@@ -288,6 +288,9 @@ AI_IQ 50                            # IQ of the AIs
 MIN_PLAYERS 0                       # minimum number of players; missing humans are filled up with AIs
 NUM_AIS 0                           # minimum number of AIs
 
+WAIT_FOR_EXTERNAL_SCRIPT 0          # set to 1 if you want the server to sleep between rounds until it is set back to 0 or
+WAIT_FOR_EXTERNAL_SCRIPT_TIMEOUT 3  # seconds
+
 # team name
 ALLOW_TEAM_NAME_COLOR 1             # allow teams to be named after a color
 ALLOW_TEAM_NAME_PLAYER 1            # allow teams to be named after the leading player
