@@ -147,6 +147,10 @@ If --enable-armathentication was activated:
     team.
   - ROUND_SCORE has the player's team name appended.
   - ROUND_SCORE_TEAM: score a team accumulated during the last round.
+  - WAIT_FOR_EXTENAL_SCRIPT: printed if the setting of the same name is
+    enabled. In this case the server will delay the start of the next round
+    until WAIT_FOR_EXTENAL_SCRIPT_TIMEOUT is reached or the setting is
+    disabled.
 - Wrapped console lines are indented by an amount of spaces that can be 
   specified using the setting CONSOLE_INDENT.
 
